--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -90,14 +90,14 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
-            width: 70%;
-            margin-bottom: 0.5rem;
+            width: 100%;
         }
 
         .nickname_inputs div {
             display: flex;
             align-items: center;
-            margin-bottom: 0.625rem;
+            padding-left: 1rem;
+            padding-bottom: 2rem;
         }
 
         .nickname_inputs label {
