--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -90,14 +90,14 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
-            width: 100%;
+            width: 50%;
         }
 
         .nickname_inputs div {
             display: flex;
             align-items: center;
             padding-left: 1rem;
-            padding-bottom: 2rem;
+            margin-bottom: 2rem;
         }
 
         .nickname_inputs label {
