--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -43,7 +43,7 @@
 
         .board-wrapper {
             position: relative;
-            padding-top: 3rem;
+            margin-top: 4rem;
             flex: 1;
         }
 
