--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -43,7 +43,7 @@
 
         .board-wrapper {
             position: relative;
-            margin-top: 4rem;
+            margin-top: 3rem;
             flex: 1;
         }
 
@@ -98,6 +98,7 @@
             display: flex;
             align-items: center;
             padding-left: 1rem;
+            gap: 0.5rem;
         }
 
         .nickname_inputs label {
