--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -98,7 +98,7 @@
             display: flex;
             align-items: center;
             padding-left: 1rem;
-            gap: 0.5rem;
+            margin-bottom: 0.5rem;
         }
 
         .nickname_inputs label {
