--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             color: white;
-            background-color: #162748;
+            background-color: #1a1a1a;
             margin: 0;
             min-height: 100vh;
         }
