--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1376,8 +1376,8 @@
 
     // Init button logic
     document.getElementById('init-button').addEventListener('click', () => {
-        positions.first = { 6: 5, 8: 3, 13: 5, 23: 2, 24: 1 };
-        positions.second = { 1: 1, 2: 2, 12: 5, 17: 3, 19: 5 };
+        positions.first = { 6: 5, 8: 3, 13: 5, 24: 2 };
+        positions.second = { 1: 2, 12: 5, 17: 3, 19: 5 };
 
         document.querySelector('input[name="checkerColor"][value="white"]').checked = true;
         document.getElementById('white-bar-select').value = '0';
