--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -303,6 +303,17 @@
             appearance: textfield;
         }
 
+        .score-inputs select {
+            text-align: center;
+            border: 1px solid #444;
+            border-radius: 0.25rem;
+            background-color: #2d2d2d;
+            color: white;
+            box-sizing: border-box;
+            -webkit-appearance: none;
+            appearance: none;
+        }
+
         .left-panel2 {
             width: 50%;
             display: flex;
@@ -635,11 +646,55 @@
                     <div class="score-inputs">
                         <div>
                             <label for="lower-score">Очки нижнего игрока:</label>
-                            <input type="number" id="lower-score" class="selector-size" min="0" , value="0">
+                            <select id="lower-score" class="selector-size">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                            </select>
                         </div>
                         <div>
                             <label for="upper-score">Очки верхнего игрока:</label>
-                            <input type="number" id="upper-score" class="selector-size" min="0" , value="0">
+                            <select id="upper-score" class="selector-size">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                            </select>
                         </div>
                         <div>
                             <label for="upper-score">Длина матча:</label>
@@ -1183,8 +1238,8 @@
             document.getElementById('black-input').addEventListener('input', updateTurnSelect);
             document.getElementById('black-input').addEventListener('input', updateCubeOwnerSelect);
             document.getElementById('black-input').addEventListener('input', drawBoard);
-            document.getElementById('lower-score').addEventListener('input', drawBoard);
-            document.getElementById('upper-score').addEventListener('input', drawBoard);
+            document.getElementById('lower-score').addEventListener('change', drawBoard);
+            document.getElementById('upper-score').addEventListener('change', drawBoard);
             document.getElementById('match_lenght').addEventListener('input', drawBoard);
             document.querySelectorAll('input[name="checkerColor"]').forEach(radio => {
                 radio.addEventListener('change', () => {
