--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -92,6 +92,7 @@
             flex-direction: column;
             align-items: stretch;
             width: 50%;
+            position: relative;
         }
 
         .nickname_inputs div {
@@ -162,6 +163,7 @@
             gap: 0.5rem;
             margin: 0 auto;
             padding-top: 1.5rem;
+            position: relative;
         }
 
         .game-type label {
@@ -588,6 +590,24 @@
             flex-shrink: 0;
             width: 100%;
         }
+
+        .green-circle {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background-color: #00FF00;
+            border-radius: 50%;
+        }
+
+        .nickname_inputs .green-circle {
+            bottom: 0;
+            right: 0;
+        }
+
+        .game-type .green-circle {
+            top: 0;
+            right: 0;
+        }
     </style>
 </head>
 
@@ -603,6 +623,7 @@
                 <label for="black-input">Черные:</label>
                 <input type="text" id="black-input" value="nick_2">
             </div>
+            <div class="green-circle"></div>
         </div>
         <div class="board-wrapper">
             <canvas id="boardCanvas" width="800" height="800"></canvas>
@@ -638,6 +659,7 @@
                     <option value="манигейм">манигейм</option>
                     <option value="матч">матч</option>
                 </select>
+                <div class="green-circle"></div>
             </div>
         </div>
         <div class="game-panel">
@@ -1387,6 +1409,7 @@
         } else if (blackBar <= 15) {
             xgid += String.fromCharCode(96 + blackBar);
         }
+        xgid += ':'
         return xgid;
     }
     // Add event listeners for elements that affect board drawing
@@ -1397,13 +1420,7 @@
     document.getElementById('dice2-select').addEventListener('change', drawBoard);
     document.getElementById('show-button').addEventListener('click', () => {
         const xgid = generateXGID();
-
-
-        if (xgid.length !== 26) {
-            alert(`Ошибка: XGID строка должна содержать 26 символов, а содержит ${xgid.length}\nXGID: ${xgid}`);
-        } else {
-            alert(`XGID: ${xgid}\n\nДлина строки: ${xgid.length} символов (корректно)`);
-        }
+        alert(`XGID: ${xgid}`);
     });
 
     // Clear button logic
