--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -47,21 +47,22 @@
             flex: 1;
         }
 
-        .green-circles {
+        .green-circle {
             position: absolute;
-            right: -60px;
-            top: 50%;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: green;
         }
 
-        .circle {
-            width: 20px;
-            height: 20px;
-            background-color: green;
-            border-radius: 50%;
+        .above-circle {
+            top: -60px;
+            right: 10px;
+        }
+
+        .below-circle {
+            bottom: -60px;
+            right: 10px;
         }
 
         canvas {
@@ -623,11 +624,8 @@
         </div>
         <div class="board-wrapper">
             <canvas id="boardCanvas" width="800" height="800"></canvas>
-            <div class="green-circles">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
+            <div class="green-circle above-circle"></div>
+            <div class="green-circle below-circle"></div>
         </div>
         <div class="selectors-wrapper">
             <div class="selectors-container">
